--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,22 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
- *= require_self
- */
+
+
+*/
+ @import "bootstrap-sprockets";
+@import "bootstrap";
+
+
+.field1 {
+  margin-left: 500px;
+}
+
+.actions1 {
+  margin-left: 625px;
+}
+
+.titlez {
+  text-align: center;
+  font-size: 5em;
+}
