--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,4 +1,4 @@
-<h1>Welcome#home</h1>
-<p>Find me in app/views/welcome/home.html.erb</p>
 
-<%= render "thepartials/post_form" %>
+  <% if current_user %>
+<%= render "layouts/post_form" %>
+<% end %>
