-heroku deployment attempt

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,4 +1,6 @@
 
   <% if current_user %>
 <%= render "layouts/post_form" %>
+<% else %>
+<%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
 <% end %>
