--- a/app/views/welcome/profile.html.erb
+++ b/app/views/welcome/profile.html.erb
@@ -1,2 +1,6 @@
-<h1>Welcome#profile</h1>
-<p>Find me in app/views/welcome/profile.html.erb</p>
+<p>
+  <%= @posts.title %>
+</p>
+<p>
+<%= @posts.title %>
+</p>
