added user avatars and comment model

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,4 +28,33 @@
 .titlez {
   text-align: center;
   font-size: 5em;
+  margin-top: 200;
+}
+
+#logo {
+  position: fixed;
+
+ margin-left: 127px;
+ }
+
+
+.round-image-50 {
+    background-color: white;
+
+    border: 1px solid #d9d9d9;
+    border-radius: 25px;
+    -moz-border-radius: 25px;
+    -webkit-border-radius: 25px;
+    height: 50px;
+    width: 50px;
+    overflow: hidden;
+    text-align: center;
+    position: relative;
+    img { width: 100% }
+    float: right;
+
+}
+
+.right {
+  align-content: right;
 }
