--- a/app/views/welcome/profile.html.erb
+++ b/app/views/welcome/profile.html.erb
@@ -1,6 +1,7 @@
-<p>
-  <%= @posts.title %>
-</p>
-<p>
-<%= @posts.title %>
-</p>
+<div class="container">
+  <div class="alert alert-info">
+    <h1><%= @post.title %></h1>
+  </div>
+  <div class="alert alert-info">
+    <h1><%= @post.title %></h1>
+    <p><%= @post.content%></p>
