--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,5 @@
-<% current_user.posts.each do |post| -%>
+
+<% @posts.each do |post| -%>
     <div class="container">
       <div class="alert alert-info">
         <h1><%= post.title%></h1>
