--- a/app/views/posts/myposts.html.erb
+++ b/app/views/posts/myposts.html.erb
@@ -1,4 +1,3 @@
-
 <% current_user.posts.each do |post| -%>
     <div class="container">
       <div class="alert alert-info">
@@ -7,4 +6,6 @@
         <div class="alert alert-info">
           <p><%= post.content%></p>
         </div>
+        <%= link_to "Delete this post", post_path(post), method: :delete, data: { confirm: "Are you sure?"} %>
+
   <% end -%>
