--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,10 +1,21 @@
-
-<% @posts.each do |post| -%>
-    <div class="container">
-      <div class="alert alert-info">
-        <h1><%= post.title%></h1>
-        </div>
-        <div class="alert alert-info">
-          <p><%= post.content%></p>
-        </div>
-  <% end -%>
+<div class="container">
+  <div class="alert alert-info">
+    <h1><%= @post.title%></h1>
+  </div>
+  <div class="alert alert-info">
+    <p><%= @post.content%></p>
+    <div class="alert alert-info">
+    <p class=text-left><% @post.comments.each do |c| %>
+      <%= c.content %>
+      <% end %>
+    </p>
+  
+    <% if current_user %>
+      <% if @post.user == current_user %>
+        <p class="text-right">
+          <%= link_to "Delete this post", post_path(@post), method: :delete, data: {confirm: "Are you sure?"} %>
+        </p>
+      <% end %>
+    <% end %>
+</div>
+</div>
