--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,11 +5,15 @@
   <div class="alert alert-info">
     <p><%= @post.content%></p>
     <div class="alert alert-info">
-    <p class=text-left><% @post.comments.each do |c| %>
-      <%= c.content %>
-      <% end %>
-    </p>
-  
+      <h2 id="com2header">Comments</h2>
+        <% @post.comments.each do |c| %>
+        <div class="alert alert-info"><%= c.content %></div>
+          <br>
+        <% end %>
+        <%= link_to "Comment", new_post_comment_path(@post) %>
+
+      </div>
+
     <% if current_user %>
       <% if @post.user == current_user %>
         <p class="text-right">
@@ -17,5 +21,12 @@
         </p>
       <% end %>
     <% end %>
+
+    <% if current_user %>
+  <% if @comment.user_id == current_user.id %>
+  <%= link_to "Delete", post_comment_path(@post, comment), method: :delete, data: { confirm: "Are you sure you want to delete this?"} %> <br>
+  <% end %>
+<% end %>
+
 </div>
 </div>
