--- a/app/views/posts/myposts.html.erb
+++ b/app/views/posts/myposts.html.erb
@@ -1,11 +1,14 @@
 <% current_user.posts.each do |post| -%>
     <div class="container">
-      <div class="alert alert-info">
+      <div class="contain1">
         <h1><%= post.title%></h1>
-        </div>
-        <div class="alert alert-info">
+        <div class="contain1">
           <p><%= post.content%></p>
         </div>
-        <%= link_to "Delete this post", post_path(post), method: :delete, data: { confirm: "Are you sure?"} %>
+      </div>
+      <%= link_to "Delete this post", post_path(post), method: :delete, data: { confirm: "Are you sure?"} %>
+  
+    </div>
+
 
   <% end -%>
