--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,23 @@
-<div class="container">
-  <div class="alert alert-info">
-    <h1><%= @post.title%></h1>
-  </div>
-  <div class="alert alert-info">
+<div class="container" >
+  <div class="contain1" >
+    <h1 class="postTitle"><%= @post.title%></h1>
+  <div class="contain1">
     <p><%= @post.content%></p>
-    <div class="alert alert-info">
-      <h2 id="com2header">Comments</h2>
+  </div>
+</div>
+</br>
+    <div class="contain2">
+      <h2 class="postTitle">Comments</h2>
         <% @post.comments.each do |c| %>
-        <div class="alert alert-info"><%= c.content %></div>
-          <br>
+
+
+          <% if current_user %>
+          <% if c.user == current_user %>
+          <%= c.content %></br>
+          <%= link_to "Delete", post_comment_path(@post, c), method: :delete, data: { confirm: "Are you sure you want to delete this?"} %>
+        </div> <br>
+          <% end %>
+          <% end %>
         <% end %>
         <%= link_to "Comment", new_post_comment_path(@post) %>
 
@@ -22,11 +31,6 @@
       <% end %>
     <% end %>
 
-    <% if current_user %>
-  <% if @comment.user_id == current_user.id %>
-  <%= link_to "Delete", post_comment_path(@post, comment), method: :delete, data: { confirm: "Are you sure you want to delete this?"} %> <br>
-  <% end %>
-<% end %>
 
 </div>
 </div>
