--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,2 @@
-<div id="logo"><img id="logo" src="http://i.imgur.com/bDv7Jo5.jpg"/> </div>
+<h1 id="welcometag"> Welcome to Type Away! </h1>
+<div id="logopic"></div>
