--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,12 @@
+
 <h1 id="welcometag"> Welcome to Type Away! </h1>
 <div id="logopic"></div>
+<p id="aboutit"> What is Type Away? <br>
+  Have you ever gone about your day doing nothing but day dreaming and creating
+  nothing but these amazing stories in your head that only YOU know about?
+  Well now you can put your mind to work and get your stories read! Type Away
+  is a platform where people can share that funny story they thought of last time
+  they were on the toilet. That love story that you've been seeing in your head you're
+  entire life. That superhero that looks incredibly like yourself. Every one of those stories
+  can now be posted for everyone to see! Get feedback and/or read others work and give feedback!
+  The ideas and stories are limitless. Just get your mind working and . . TYPE AWAY! <p>
