--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,9 +1,11 @@
+<h1 class="titlez"> New Comment </h1>
 <%= form_for [@post,@comment] do |f| %>
-  <div class="field1">
-    <%= f.label :content %><br />
-    <%= f.text_field :content, autofocus: true %>
-  </div>
-  <div class="actions1">
+  <div class="field">
+
+    <%= f.text_area :content, :cols => 20, :rows => 5, :class => "forms", autofocus: true %>
+  </div></br>
+
+  <div class="actions">
     <%= f.submit "Post" %>
     </div>
   <% end %>
