--- a/app/views/layouts/_post_form.html.erb
+++ b/app/views/layouts/_post_form.html.erb
@@ -1,18 +1,18 @@
 <h1 class="titlez"> New Post </h1>
 
 <%= form_for(@post) do |f| %>
-  <div class="field1">
+  <div class="field">
     <%= f.label :title %><br />
-    <%= f.text_field :title, autofocus: true, :class => 'forms1' %>
+    <%= f.text_field :title, autofocus: true, :class => 'forms' %>
   </div>
 
-  <div class="field1">
+  <div class="field">
     <%= f.label :content %><br />
-    <%= f.text_area :content, :cols => 40, :rows => 10, :class => 'forms1' %>
+    <%= f.text_area :content, :cols => 40, :rows => 10, :class => 'forms' %>
   </div>
 
 
-  <div class="actions1">
+  <div class="actions">
     <%= f.submit "Post" %>
     </div>
   <% end %>
