--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,18 +9,20 @@
     <div class="contain2">
       <h2 class="postTitle">Comments</h2>
         <% @post.comments.each do |c| %>
-
-
           <% if current_user %>
           <% if c.user == current_user %>
-          <%= c.content %></br>
+          <div class="commentbox">
+          <p class="usernameC">@<%= c.user.username%></p>
+          <p class="timeC"><%= c.created_at %></p></br>
+          <%= c.content %>
           <%= link_to "Delete", post_comment_path(@post, c), method: :delete, data: { confirm: "Are you sure you want to delete this?"} %>
-        </div> <br>
+        </div>
           <% end %>
           <% end %>
         <% end %>
         <%= link_to "Comment", new_post_comment_path(@post) %>
 
+      </div> <br>
       </div>
 
     <% if current_user %>
