--- a/app/views/layouts/_post_form.html.erb
+++ b/app/views/layouts/_post_form.html.erb
@@ -1,18 +1,31 @@
-<h1 class="titlez"> New Post </h1>
 
+<div class="content">
+  <div class="visible">
+    <h1 id="postme">
+      New
+    </h1>
+    <ul class="n">
+      <li class="m">Post</li>
+     <li class="m">Ghost Story</li>
+      <li class="m">Romance</li>
+      <li class="m">Adventure</li>
+    </div>
+  </div>
 <%= form_for(@post) do |f| %>
-  <div class="field">
+<div class="field1">
     <%= f.label :title %><br />
-    <%= f.text_field :title, autofocus: true, :class => 'forms' %>
+    <%= f.text_field :title, autofocus: true, :class => 'forms1' %>
   </div>
 
-  <div class="field">
+
+
+  <div class="field2">
     <%= f.label :content %><br />
-    <%= f.text_area :content, :cols => 40, :rows => 10, :class => 'forms' %>
+    <%= f.text_area :content, :cols => 40, :rows => 10, :class => 'forms1' %>
   </div>
 
 
-  <div class="actions">
-    <%= f.submit "Post" %>
+  <div class="actions1">
+    <%= f.submit "Post", :class => 'buttn1' %>
     </div>
   <% end %>
