remove avatar for heroku test

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -90,7 +90,8 @@ body, .forms, .forms1 {
 #aboutit {
   font-family: 'Cabin Sketch', cursive;
   text-align: center;
-  font-size: 45px;
+  font-size: 30px;
+  margin-left: 70px;
 
 }
 #logopic {
