--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,4 +1,3 @@
-
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -44,6 +43,7 @@
 
         <li >
           <% if user_signed_in? %>
+          <li class="round-image-50"><%= image_tag(current_user.avatar.url(:thumb))%></li>
           <li>Logged in as <strong><%= current_user.username %></strong>.</li>
           <li>  <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> </li>
           <li>  <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %> </li>
@@ -59,5 +59,3 @@
 </nav>
     </nav>
 </div>
-
-<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
