--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -2,7 +2,7 @@
 <%= form_for [@post,@comment] do |f| %>
   <div class="field">
 
-    <%= f.text_area :content, :cols => 20, :rows => 5, :class => "forms", autofocus: true %>
+    <%= f.text_area :content, :cols => 20, :rows => 5, :class => "forms", autofocus: true, :class => "commentnote" %>
   </div></br>
 
   <div class="actions">
