--- a/app/views/posts/myposts.html.erb
+++ b/app/views/posts/myposts.html.erb
@@ -1,14 +1,14 @@
-<% current_user.posts.each do |post| -%>
-    <div class="container">
-      <div class="contain1">
-        <h1><%= post.title%></h1>
-        <div class="contain1">
-          <p><%= post.content%></p>
-        </div>
+
+<% current_user.posts.each do |post| %>
+<div class="contain1">
+  <%= link_to post_path(post.id) do %>
+
+        <h1 class="postTitle"><%= post.title%></h1>
       </div>
       <%= link_to "Delete this post", post_path(post), method: :delete, data: { confirm: "Are you sure?"} %>
-  
+
     </div>
 
 
-  <% end -%>
+  <% end %>
+  <% end %>
