--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,8 @@
 <div class="container" >
   <div class="contain1" >
     <h1 class="postTitle"><%= @post.title%></h1>
-  <div class="contain1">
-    <p><%= @post.content%></p>
-  </div>
+  <br>
+    <p class="contentP"><%= @post.content%></p>
 </div>
 </br>
 <h2 class="postTitle">Comments</h2>
