--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,7 +5,7 @@
 
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email, :class => "labelz"  %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
 
@@ -14,7 +14,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+    <%= f.label :password, :class => "labelz"  %> <i>(leave blank if you don't want to change it)</i><br />
     <%= f.password_field :password, autocomplete: "off" %>
     <% if @minimum_password_length %>
       <br />
@@ -23,22 +23,20 @@
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :password_confirmation, :class => "labelz" %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
   <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+    <%= f.label :current_password, :class => "labelz"  %> <i>(we need your current password to confirm your changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
 
   <div class="actions"></br>
-    <%= f.submit "Update" %>
+    <%= f.submit "Update",:class => "commentnote" %>
     </div>
   <% end %>
 
-  <h3>Cancel my account</h3>
+  <h3 id="cancel">Cancel my account</h2>
 
-  <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-  <%= link_to "Back", :back %>
+  <%= button_to "CANCEL IT!", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, :class => "cancelbut" %></p>
