--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,11 +14,11 @@
 
           <p class="usernameC">@<%= c.username%></p>
           <p class="timeC"><%= c.created_at %></p></br>
-          <p class="contentC"><%= c.content %></p>
+          <p class="contentC"><%= c.xcontent %></p>
 
           <% end %>
         </div></br>
-          <% end %>
+          
 
 
 
