--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,7 +12,7 @@
 
 
 
-          <p class="usernameC">@<%= c.user.username%></p>
+          <p class="usernameC">@<%= c.username %></p>
           <p class="timeC"><%= c.created_at %></p></br>
           <p class="contentC"><%= c.content %></p>
 
