--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,18 +9,13 @@
 <%= button_to "Add a comment", new_post_comment_path(@post),method: :get, :class => "commentstag" %>
         <% @post.comments.each do |c| %>
         <div class="postt yellow">
-
-
-          <% if c.user == current_user %>
-
-          <p class="usernameC">@<%= c.user.username%></p>
+        <p class="usernameC">@<%= c.email %></p>
           <p class="timeC"><%= c.created_at %></p></br>
           <p class="contentC"><%= c.content %></p>
 
-          <% end %>
         </div></br>
           <% end %>
-        
+      
 
 
     <% if current_user %>
