--- a/app/views/layouts/_post_form.html.erb
+++ b/app/views/layouts/_post_form.html.erb
@@ -26,6 +26,6 @@
 
 
   <div class="actions">
-    <%= f.submit "Post" %>
+    <%= f.submit "Post",:class => "commentnote"  %>
     </div>
   <% end %>
