--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,8 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <link rel="icon" href="http://i.imgur.com/h8IIdXe.png">
+
   <style type="text/css">body, a:hover {cursor: url(http://cur.cursors-4u.net/others/oth-5/oth509.ani), url(http://cur.cursors-4u.net/others/oth-5/oth509.png), progress !important;}</style><a href="http://www.cursors-4u.com/cursor/2009/12/10/animated-school-pencil.html" target="_blank" title="Animated School Pencil"><img src="http://cur.cursors-4u.net/cursor.png" border="0" alt="Animated School Pencil" style="position:absolute; top: 0px; right: 0px;" /></a>
 </head>
 <body>
