--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,9 @@
 
 <h1 id="welcometag"> Welcome to Type Away! </h1>
-<div id="logopic"></div>
+<div id="logopic1"></div>
+<div id="logopic2"></div>
+<div id="logopic3"></div>
+<div id="logopic4"></div>
 <p id="aboutit"> What is Type Away? <br>
   Have you ever gone about your day doing nothing but day dreaming and creating
   nothing but these amazing stories in your head that only YOU know about?
