--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -43,12 +43,12 @@
 
         <li >
           <% if user_signed_in? %>
-          <li>Logged in as <strong><%= current_user.username %></strong>.</li>
-          <li>  <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> </li>
-          <li>  <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %> </li>
+          <li>Logged in as <strong class="currnt"><%= current_user.username %></strong>.</li>
+          <li>  <%= link_to 'Edit profile', edit_user_registration_path, :class => 'currnt' %> </li>
+          <li>  <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'currnt'  %> </li>
           <% else %>
-          <li>  <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> </li>
-          <li><%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %> </li>
+          <li>  <%= link_to "Sign up", new_user_registration_path, :class => 'currnt'  %> </li>
+          <li><%= link_to "Login", new_user_session_path, :class => 'currnt'  %> </li>
           <% end %>
         </li>
       </ul>
